fixing picutres being behind footer may have bitten more than i can chew

--- a/css/main.css
+++ b/css/main.css
@@ -25,6 +25,7 @@ body {
     gap:var(--gap);
     padding-bottom: 10%;
     
+    
      
 }
 
@@ -32,6 +33,7 @@ body {
     width: 100%;
     height: 100%;
     object-fit: cover;
+
     
 }
 
@@ -41,6 +43,7 @@ body {
         --row-height:200px;
         width: 60%;
 
+
     }
 }
 
@@ -49,6 +52,7 @@ body {
         --number-columns: 1;
         --row-height:200px;
         width: 50%;
+ 
 
     }
 
@@ -100,6 +104,7 @@ button{
     text-align: center;
     box-shadow: 0 6px 20px -5px black;
     border: 5px solid rgb(255, 255, 255);
+    z-index: 2;
 }
 
 
@@ -123,7 +128,7 @@ button:hover{
     height: 100%;
     padding: 20px 0 0 0;
     transition: all 0.5s ease-in-out;
-
+    z-index: 1;
 }
 
 
@@ -134,7 +139,7 @@ button:hover{
     width: 100%;
     position: fixed;
     bottom: 0;
-    z-index: -1;
+    z-index: 0;
     
 }
 
@@ -178,7 +183,7 @@ input::placeholder{
     transition: color 0.3s ease;
     display: block;
     width: 100%;
-    min-width: 100% !important;
+    min-width: 100;
 }
 
 input:focus::placeholder {
